# xarxa

./: CLA.md  COPYRIGHT  Cargo.toml  NOTICE  README.md  SUMMARY.md
.sqlx/: query-12c82eec0e0108bbf623fd82c21179a25ac7fb98bac9c9a4fed8c9de0f2ca7a5.json  query-7c4ff7418164a194d1fb919e0b5139f49edb160b8883b4471f96fce837904a48.json  query-9feaa1eae4676bac5c10dc16baded7f90705036bdc6b99f885bca086056b93b3.json  query-a98392a8ddd811c0cd52a43d4c0b0af6dbc3a47c36c1609f57411346d73314e4.json  query-aee6dd4d337a155f7c1800864e4bbdc1b7500d050dc53bbdf9af72db35ba05d2.json  query-c6cf2a38fc363b60355252da2e9ce0d2ffac10642742b49dc6c6985c72e4813c.json
migrations/: 20250812213530_users.up.sql  20250812213538_namespaces.down.sql  20250812213538_namespaces.up.sql  20250812213547_workflows.down.sql  20250812213547_workflows.up.sql  20250812214931_workflow_versions.down.sql  20250812214931_workflow_versions.up.sql  20250812221811_audit_log.down.sql  20250812221811_audit_log.up.sql  20250813194554_workflow_runs.down.sql  20250813194554_workflow_runs.up.sql  20250816061603_workflow_version_fk.down.sql  20250816061603_workflow_version_fk.up.sql  schema.xml
src/: main.rs
src/adapters/: mod.rs
src/adapters/filesystem/: mod.rs  plugin_auto_loader.rs
src/adapters/http/: auth.rs  mod.rs  namespace_handler.rs  user_handler.rs  workflow_handler.rs
src/adapters/postgres/: mod.rs  namespace_repo.rs  user_repo.rs  workflow_dto.rs  workflow_repo.rs
src/adapters/wasmtime/: mod.rs  wit_runtime.rs
src/core/: mod.rs
src/core/domain/: mod.rs  namespace.rs  user.rs  wit.rs  workflow.rs
src/core/ports/: mod.rs  storage.rs  wit.rs
src/core/services/: mod.rs  namespace.rs  user.rs  workflow.rs
src/infra/: config.rs
