[package]
name = "xarxa"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
axum = { version = "0.8.4", features = ["multipart", "macros", "query"] }
axum-extra = { version = "0.10.1", features = ["typed-header"]}
axum-cookie = "0.2.3"
tower-http = { version = "0.6.6", features = ["trace"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
wasmtime = { version = "35.0.0", features = ["component-model"] }
wasmtime-wasi = "35.0.0"
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
serde_json = "1.0.141"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
notify = "8.1.0"
jsonschema = { version = "0.33.0", features = []}
chrono = { version = "0.4.41", features = ["serde"] }
md5 = "0.8.0"
uuid = { version = "1.17.0", features = ["serde", "v7"] }
dotenvy = "0.15.7"
config = "0.15.15"
futures = "0.3.31"
aws-config = "1.8.5"
aws-sdk-s3 = "1.103.0"
aws-credential-types = "1.2.5"
sha2 = "0.10.9"
rand = "0.9.2"
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = "9.3.1"
cookie = "0.18.1"
# headers = "0.4.1"
# once_cell = "1.21.3"
